--- a/package.json
+++ b/package.json
@@ -25,12 +25,8 @@
     "@nuxtjs/strapi": "^0.3.4",
     "@nuxtjs/vuetify": "^1.12.3",
     "@tailwindcss/typography": "^0.4.1",
-    "@tiptap/starter-kit": "^2.0.0-beta.164",
-    "@tiptap/vue-2": "^2.0.0-beta.73",
-    "@tiptap/vue-3": "^2.0.0-beta.85",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "tiptap-vuetify": "^2.24.0",
     "typography": "^0.16.21",
     "vue-carousel": "^0.18.0"
   },
@@ -54,6 +50,9 @@
     "prettier": "^2.3.2",
     "sass": "^1.45.2",
     "sass-loader": "10.1.1",
-    "stylelint": "^14.3.0"
+    "stylelint": "^14.3.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-recommended-vue": "^1.1.0",
+    "stylelint-config-prettier": "^9.0.3"
   }
 }
