--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/strapi": "^0.3.4",
     "@tailwindcss/typography": "^0.4.1",
     "core-js": "^3.15.1",
+    "moment": "^2.29.3",
     "nuxt": "^2.15.7",
     "typography": "^0.16.21",
     "vue-carousel": "^0.18.0"
@@ -49,8 +50,8 @@
     "sass": "^1.45.2",
     "sass-loader": "10.1.1",
     "stylelint": "^14.3.0",
-    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
-    "stylelint-config-prettier": "^9.0.3"
+    "stylelint-config-standard": "^24.0.0"
   }
 }
